# UserEdit

./: Makefile  README.md  alembic.ini  pyproject.toml
user_editor/: app.py  db.py
user_editor/migrations/: env.py
user_editor/migrations/versions/: 12d344a9fafd_added_user_table.py  15e9626e8a05_added_user_table.py  282662eaa959_added_user_table.py  66cf6de4e057_added_table.py  776146360cef_added_user_table.py  9b9f40ec2cdc_added_table.py  a1f6f63df345_added_table.py  c83a3987aec4_added_user_table.py  cbfb208bfd59_added_user_table.py  e57146314e8c_added_user_table.py  f29f7ded5de4_added_user_table.py
user_editor/models/: user.py
user_editor/templates/: index.html  login.html  register.html
user_editor/templates/TEST/: Main.html  scripts.js  styles.css  styles_OLD.css  welcome_page.html
user_editor/templates/main_sample/: base.html  footer.html  header.html
user_editor/templates/users/: add_user.html  confirm_delete.html  edit_user.html  users_list.html
