[tool.poetry]
name = "user-editor"
version = "0.1.0"
description = ""
authors = ["nikogamsahurdia <eleron96@gmail.com>"]
readme = "README.md"
packages = [{include = "user_editor"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
fastapi = "^0.100.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
