[tool.poetry]
name = "user-editor"
version = "0.1.0"
description = ""
authors = ["nikogamsahurdia <eleron96@gmail.com>"]
readme = "README.md"
packages = [{include = "user_editor"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = { version = "^2.2", extras = ["async"] }
fastapi = "^0.100.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
flask-wtf = "^1.1.1"
psycopg2 = "^2.9.7"
alembic = "^1.11.2"
bcrypt = "^4.0.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
python-decouple = "^3.8"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
